--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [submit]
 [access "refs/*"]
 	owner = group user/Andrey Shamis (AndreyShamis)
+	read = group user/symfony.lmp
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Andrey Shamis (AndreyShamis)
 	label-Verified = -1..+1 group user/Andrey Shamis (AndreyShamis)
