Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,6 +7,7 @@
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Andrey Shamis (AndreyShamis)
 	label-Verified = -1..+1 group user/Andrey Shamis (AndreyShamis)
+	label-Verified = -1..+1 group user/symfony.lmp
 	push = group user/Andrey Shamis (AndreyShamis)
 	read = group user/Andrey Shamis (AndreyShamis)
 	rebase = group user/Andrey Shamis (AndreyShamis)
@@ -17,6 +18,9 @@
 	push = +force group user/Andrey Shamis (AndreyShamis)
 	pushMerge = group user/Andrey Shamis (AndreyShamis)
 	read = group user/Andrey Shamis (AndreyShamis)
+	label-Code-Review = -1..+1 group user/symfony.lmp
 [access "refs/tags/*"]
 	push = group user/Andrey Shamis (AndreyShamis)
 	push = +force group user/Andrey Shamis (AndreyShamis)
+	create = group user/Andrey Shamis (AndreyShamis)
+	createSignedTag = group user/Andrey Shamis (anshamis)
