--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -1,7 +1,38 @@
 monolog:
     handlers:
         main:
-            type: stream
+            type: fingers_crossed
+            action_level: info
+            handler: grouped
+            excluded_404s:
+                # regex: exclude all 404 errors from the logs
+                - ^/
+        grouped:
+            type:    group
+            members: [streamed, deduplicated]
+        streamed:
+            type: rotating_file
             path: "%kernel.logs_dir%/%kernel.environment%.log"
-            level: debug
-            channels: ["!event"]
+            level: notice
+            channels: ["!event", "!doctrine"]
+            # max number of log files to keep, defaults to zero, which means infinite files
+            max_files: 60
+        console:
+            type:   console
+            process_psr_3_messages: false
+            channels: ["!event", "!doctrine"]
+        deduplicated:
+            type: deduplication
+            # the time in seconds during which duplicate entries are discarded (default: 60)
+            time: 300
+            handler: swift
+        swift:
+            type:       swift_mailer
+            from_email: '%env(ADMIN_EMAIL)%'
+            to_email:   '%env(ADMIN_EMAIL)%'
+            # or list of recipients
+            # to_email:   ['dev1@example.com', 'dev2@example.com', ...]
+            subject:    '%%level_name%% in LogBook [%kernel.environment%]! - %%message%%'
+            level:      error
+            formatter:  monolog.formatter.html
+            content_type: text/html
